--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <title>Assignment-1</title>
   </head>
   <body>
-    
     <!-- navbar -->
     <nav>
       <label class="logo">My Kitchen</label>
@@ -36,7 +35,7 @@
       <div class="flex-item-1 banner-text">
         <h1><span class="orange-color">Skip</span> The Diet</h1>
         <h1>Just Eat Healthy</h1>
-        <h1>With Food Network</h1>
+        <h1>Alongside My Kitchen</h1>
         <p>
           Imagine you don't need a diet because we provide healthy and delicious
           food for you
@@ -81,27 +80,27 @@
           <img src="images/food/food-1.jpg" alt="" />
           <h3>Mashroom Salsa</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Consectetur, cupiditate. Lorem, ipsum dolor sit amet consectetur
-            adipisicing elit. Est, non.
+            Everybody knows how mushroom helps us to fill up the need of
+            protein. Considering this information, we made a complete new menu
+            of mushroom without using any raw meat.
           </p>
         </div>
         <div class="flex-item-3">
           <img src="images/food/food-2.png" alt="" />
           <h3>Lentil Soup</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Consectetur, cupiditate. Lorem, ipsum dolor sit amet consectetur
-            adipisicing elit. Est, non.
+            Lentil soup is featured in our list only because we took time to
+            make it special. It is exceptional as reviewed by most of our
+            regular buyers. You will definitely like it.
           </p>
         </div>
         <div class="flex-item-3">
           <img src="images/food/food-3.png" alt="" />
           <h3>Veggie Shutter</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Consectetur, cupiditate. Lorem, ipsum dolor sit amet consectetur
-            adipisicing elit. Est, non.
+            What not can you find in this amazing combination. From legume to
+            pumpkin, you bet. Not only this is flavoury but also it has rich
+            level of ingrdeints.
           </p>
         </div>
       </div>
@@ -113,23 +112,25 @@
       <div class="flexbox-container-4">
         <div class="flex-item-4">
           <img src="images/reviewer/reviewer-1.webp" alt="" />
-          <div class="name green">Neena Chatterjee</div>
+          <div class="name">Neena Chatterjee</div>
           <p>
-            I would recommend their products. Much friendly in interaction too.
+            I would recommend their menues. Much friendly in interaction too.
           </p>
         </div>
         <div class="flex-item-4">
           <img src="images/reviewer/reviewer-2.jpg" alt="" />
-          <div class="name green">Avilash Roy</div>
+          <div class="name">Avilash Roy</div>
           <p>
-            Bought a watch and a western hat. They seem to last longer! Happy.
+            Bought a roll and a chicken pizza. They seem to taste heavenly!
+            Happy.
           </p>
         </div>
         <div class="flex-item-4">
           <img src="images/reviewer/reviewer-3.jpg" alt="" />
-          <div class="name green">Henric Roberto</div>
+          <div class="name">Henric Roberto</div>
           <p>
-            Whoever is on hurry can surly buy their exclusive materials in time.
+            Whoever is on hurry can surly buy their exclusive food-items in
+            time.
           </p>
         </div>
       </div>
