--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
         </button>
       </div>
       <div class="flex-item-1">
-        <img src="images/female/female-1.png" alt="female" />
+        <img src="images/person/female.png" alt="female" />
       </div>
     </section>
 
     <!-- about me -->
     <section class="aboutMe flexbox-container-2" id="about">
       <div class="flex-item-2 me">
-        <img src="images/female/female-2.png" alt="" />
+        <img src="images/person/male.png" alt="" />
       </div>
       <div class="flex-item-2 down">
         <h2>About Me</h2>
@@ -71,9 +71,10 @@
     <!-- recipies -->
     <section class="recipies" id="myRecipies">
       <h1>My Recipies</h1>
+      <p>These are my brand-new recipies.</p>
       <p>
-        These are my brand-new recipies. They are completely packaged with much
-        vegetables, pure nutrition and savoury taste. Check them out.
+        They are completely packaged with much vegetables, pure nutrition and
+        savoury taste. Check them out.
       </p>
       <div class="flexbox-container-3">
         <div class="flex-item-3">
