bhai ebar final..

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       <div class="flex-item-2 down">
         <h2>About Me</h2>
         <p>
-          I am a self-taught chef. I can cook nutrituos food alngside keeping it
-          tasty and yummy. For 10 years, I have worked with KFC what made me
-          feel like that is not the food people should eat. So I had to leave
-          off them and make my own online restaurant. I hope you will like it.
+          I am a self-taught chef. I can cook nutrituos food keeping it tasty
+          and yummy. For 10 years, I have worked with KFC what made me feel like
+          that is not the food people should eat. So I had to leave off them and
+          make my own online restaurant. I hope you will like it.
         </p>
         <button>
           <a href="https://github.com/arnob-loves-coding">Contact Me</a>
